# Logger

./: CMakeLists.txt  README.md
include/: Logger.hpp  LoggerHandler.hpp
include/logger/: Logger.hpp
src/: Logger.cpp  LoggerHandler.cpp
src/Logger/: Logger.cpp
tests/: test_logger.cpp
tests/logs/: test_log.txt
